--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </header>
     
     <section class="painel-main">
-        <h1>Testes de software</h1>
-
+        <h1>Testes de software<br>Lana de Medice<br>Samuel Romano</h1>
     </section>
 
     <div class="conteudo-box">
